feat[go-redis] 将用户登录信息存入redis

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -1,9 +1,9 @@
 [app]
-mode=debug
+mode = debug
 
 [server]
-url=localhost
-http_port=8000
+url = localhost
+http_port = 8000
 
 [database]
 TYPE = mysql
@@ -12,3 +12,9 @@ PASSWORD = wmywmy20222
 #127.0.0.1:3306
 PATH = localhost:3306
 NAME = bi_db
+
+[redis]
+PATH = localhost
+PORT = 6379
+PASSWORD =
+DB = 0
