feat[swag] 新增集成go-swaggerAPI文档

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -2,8 +2,9 @@
 mode = debug
 
 [server]
-url = localhost
-http_port = 8000
+URL = localhost
+HTTP_PORT = 8000
+ADDR = localhost:8000
 
 [database]
 TYPE = mysql
