fix[.gitignore] 停止跟踪.env文件

--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,10 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+.env
 
 # Go workspace file
 go.work
 
 .idea
 
-*.env
