--- a/conf/app.ini
+++ b/conf/app.ini
@@ -1,15 +1,10 @@
 [app]
 mode = debug
 
-[server]
-URL = localhost
-HTTP_PORT = 8000
-ADDR = localhost:8000
-
 [database]
 TYPE = mysql
 USER = root
-PASSWORD = wmywmy20222
+PASSWORD = rootroot
 #127.0.0.1:3306
 PATH = localhost:3306
 NAME = bi_db
